<resources>

    //LOGIN
    <string name="app_name">ACAB</string>
    <string name="login">INICIAR SESION</string>
    <string name="usuario">USUARIO</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="in_usu">Introduce el nombre de usuario</string>
    <string name="in_con">Introduce la contraseña</string>
    //PEDIDOS
    <string name="partner">PARTNER:</string>
    <string name="comercial">COMERCIAL:</string>
    <string name="comprar">COMPRAR</string>
    <string name="cantidad">CANTIDAD:</string>
    <string name="num">NUMERO</string>
    <string name="nuevo">NUEVO</string>
    <string name="partners">PARTNERS</string>
    <string name="nombre">NOMBRE:</string>
    <string name="direccion">DIRECCION:</string>
    <string name="telefono">TELEFONO</string>
    <string name="email">EMAIL:</string>
    <string name="nuevo_partner">NUEVO PARTNER</string>
    <string name="nombreTexto">NOMBRE</string>
    <string name="direccionTexto">DIRECCION</string>
    <string name="emailTexto">EMAIL</string>
    <string name="comercialTexto">COMERCIAL</string>
    <string name="tlf">TLF</string>
    <string name="conf">COFIRMAR</string>
    <string name="np">NºPRODUCTOS ELEGIDOS</string>
    <string name="n">0</string>
    <string name="bor">BORRAR</string>
    <string name="precio">PRECIO:</string>
    <string name="pefinal">EL PEDIDO</string>
    <string name="prefinal">PRECIO TOTAL:</string>
    <string name="hpedido">HACER PEDIDO</string>
    <string name="descuento">DESCUENTO</string>
    <string name="productos">PRODUCTOS</string>
    <string name="precioUn">PRECIO UNITARIO</string>
    <string name="cantidadSinPuntos">CANTIDAD</string>
    <string name="eleguir">Para elegir una almohada clica en la almohada</string>
    <string name="stock">/</string>
    <string name="titulo_pedidos">PEDIDOS</string>
    <string name="alta">AÑADIR +</string>
    <string name="baja">ELIMINAR</string>
    <string name="modificacion">MODIFICAR</string>
    <string name="volver">SALIR</string>
    <string name="pe">PEDIDOS</string>
    <string name="pro">PRODUCTO:</string>
    <string name="fec_p">FECHA PEDIDO:</string>
    <string name="fec_e">FECHA ENVIO:</string>


    //AGENDA
    <string name="MES">mes actual</string>
    <string name="siguiente"><![CDATA[>]]></string>
    <string name="anterior"><![CDATA[<]]></string>
    <string name="abrirCal">añadir nueva actividad +</string>
    <string name="titulo">Nombre de la actividad</string>
    <string name="descrpActividad">Descripcion de la actividad</string>
    <string name="fecha">Seleccionar fecha</string>
    <string name="añadir">añadir</string>

    //PARTNERS
    <string name="guardar">GUARDAR</string>
    <string name="CIF">CIF:</string>
    <string name="CIFV">CIF</string>
    <string name="contacto">CONTACTO:</string>
    <string name="idzona">ZONA</string>
    <string name="CONTACTOV">CONTACTO</string>
    <string name="zona">ZONA:</string>
    <string name="agenda">AGENDA</string>
    <string name="delegacion">Delegacion Provincial</string>
    <string name="direccionInfo">Berio Pasealekua, 50, 20018 Donostia, Gipuzkoa</string>
    <string name="llamar">Llamar</string>
    <string name="tlf1">TELEFONO:</string>
    <string name="modPartner">Modificar</string>
    <string name="modPartnerTitulo">"Partner: "</string>
    <string name="Partnerborrar">BORRAR</string>
    <string name="aplicar">APLICAR CAMBIOS</string>
    <string name="eliminar_actividad">ELIMINAR ACTIVIDAD</string>


    <string-array name="nombremeses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="correo_menu">almohadas@acab.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="importar">IMPORTAR</string>

</resources>