<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".agenda.nuevo_agenda">

    <EditText
        android:id="@+id/edtTit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center|top"
        android:hint="@string/descrpActividad"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tvFec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/botFec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha" />

    <Button
        android:id="@+id/botNue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/añadir" />

</LinearLayout>