<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:text="@string/nuevo_partner"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:layout_wrapBehaviorInParent="horizontal_only" />

    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/direccionTexto"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        app:layout_constraintVertical_bias="0.565" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/comercialTexto"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/emailTexto"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/nombreTexto"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/tlf"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:fontFamily="monospace"
        android:text="@string/direccion"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:text="@string/nombre"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextText3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/editTextText3"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="monospace"
        android:text="@string/telefono"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.44" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:fontFamily="monospace"
        android:text="@string/comercial"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="monospace"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>